68346: Hover drag-handle + alignment fix

--- a/src/app/+item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
+++ b/src/app/+item-page/edit-item-page/item-bitstreams/item-bitstreams.component.scss
@@ -23,7 +23,7 @@
   }
 }
 
-.bitstream-row:hover .drag-handle {
+:host ::ng-deep .bitstream-row:hover .drag-handle {
   visibility: visible !important;
 }
 
